feat: fix CLI, refactor backend services, and update documentation

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,21 @@ ENV/
 env/
 .venv/
 
+# UI
+# ui/
+
+# Evaluation
+tests/
+
+# Documentation
+docs/
+
+
+#Alembic
+alembic/
+*.ini
+
+
 # Environment variables
 .env
 .env.local
