feat: Implement session expiration, API key security, and database cleanup services

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,10 @@ GROQ_MAX_TOKENS=512
 GROQ_TEMPERATURE=0.6
 
 # Database
+# Local development
 DATABASE_URL=sqlite+aiosqlite:///./cheziousbot.db
+# Docker (use /app/data for persistence)
+# DATABASE_URL=sqlite+aiosqlite:////app/data/cheziousbot.db
 
 # Context Management
 CONTEXT_WINDOW_SIZE=10
@@ -18,3 +21,10 @@ RATE_LIMIT_PER_MINUTE=20
 
 # Logging
 LOG_LEVEL=INFO
+
+# CORS (JSON array of allowed origins)
+ALLOWED_ORIGINS=["http://localhost:8000", "http://127.0.0.1:8000"]
+
+# API Security (enable for production)
+API_KEY_ENABLED=false
+API_KEY=your_secure_api_key_here
