--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,5 @@ sse-starlette>=1.8.0
 # Rate Limiting
 slowapi>=0.1.9
 
-# Testing
-pytest>=7.4.0
-pytest-asyncio>=0.23.0
-httpx>=0.26.0
+# Resilience
+tenacity>=8.2.3
